# Memoiretest

./: pyproject.toml
intelli-surveillance/: .env.example  .gitignore  README.md  main.py  pyproject.toml
intelli-surveillance/src/api/: main.py
intelli-surveillance/src/core/: config.py  logging.py
intelli-surveillance/src/models/: database.py  schemas.py
intelligent-surveillance-system/: .gitignore  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_VALIDATION_REPORT.md  GUIDE_DEPLOIEMENT_GPU.md  GUIDE_UTILISATION.md  GUIDE_UV_COMPLET.md  LEARNING_GUIDE.md  QUICKSTART.md  QWEN_32B_REQUIREMENTS.md  RAPPORT_TESTS_OUTILS_AVANCES.md  README.md  README_REAL_TESTS.md  README_TESTS.md  README_TESTS_GPU.md  README_VLM_CHATBOT_SYMBIOSIS.md  TESTING_METHODOLOGY_THESIS.md  TRAINING_COMPLETE.md  VLM_CHATBOT_SYMBIOSIS.md  VLM_CHATBOT_USER_GUIDE.md  WORKFLOW_COMPLET.md  __init__.py  auto_kimi.expect  check_gpu_system.py  check_gpu_system_uv.py  clean_project_safe.py  cleanup_obsolete_files.sh  cleanup_project.py  cleanup_tests.sh  collect_real_metrics.py  com.md  compare_vlm_models.py  config_fast.py  debug_vlm_init.py  evaluate_system.py  evaluation_plan_20250910_144120.json  evaluation_results_20250910_143743.json  evaluation_results_20250910_143902.json  fix_kimi_vl.py  fix_memory_gpu.py  install_gpu_deps.py  (+59 more)
intelligent-surveillance-system/.github/workflows/: docs.yml  mlc_config.json
intelligent-surveillance-system/config/: __init__.py  app_config.py  base_config.py  config_loader.py  config_manager.py  settings.py  video_test_config.py
intelligent-surveillance-system/dashboard/: AUDIO_FIX.md  FINAL_README.md  PRODUCTION_README.md  README.md  __init__.py  app.py  app_simple.py  camera_manager.py  enhanced_dashboard.py  launch.sh  production_dashboard.py  real_pipeline_integration.py  requirements.txt  run_surveillance.py  scenario_testing.py  surveillance_dashboard.py  test_audio.html  test_audio_debug.html  test_simple.html  video_context_integration.py  vlm_chatbot_advanced_features.py  vlm_chatbot_optimizations.py  vlm_chatbot_symbiosis.py  vlm_integration.py  vlm_scenario_test_report.md  working_dashboard.py
intelligent-surveillance-system/dashboard/components/: __init__.py  camera_grid.py  vlm_chat.py
intelligent-surveillance-system/dashboard/config/: settings.py
intelligent-surveillance-system/dashboard/services/: gpt_chat_service.py  session_manager.py  video_memory_system.py  vlm_integration.py
intelligent-surveillance-system/dashboard/tests/: test_real_pipeline_integration.py  test_vlm_chatbot_symbiosis.py
intelligent-surveillance-system/dashboard/utils/: audio_alerts.py
intelligent-surveillance-system/data/datasets/: README.md
intelligent-surveillance-system/docs/: AUDIT_COMPLET.md  MEMORY_OPTIMIZATION.md  README.md  VIDEO_TESTING_GUIDE.md  index.md  methodologie_et_architecture.md  training_methodologies.md
intelligent-surveillance-system/docs/getting-started/: colab.md  installation.md
intelligent-surveillance-system/examples/: complete_testing_example.py  tool_optimization_demo.py
intelligent-surveillance-system/models/: dinov2_vitb14.pth.downloaded
intelligent-surveillance-system/notebooks/: 1_fine_tuning_vlm.ipynb  2_transfer_learning_yolo.ipynb  3_end_to_end_training.ipynb  demo.ipynb
intelligent-surveillance-system/old_tests/: download_and_test_models.py  fix_all_imports.py  run_gpu_tests_uv.py  simple_test.py  test_corrections.py  test_simple_vlm.py  test_tool_optimization.py
intelligent-surveillance-system/scripts/: COMMANDES_SERVEUR_GPU.md  COMMANDES_UV_SERVEUR.md  batch_video_test.py  dataset_utils.py  manage_video_datasets.py  quick_setup.py  run_tests.py  synthetic_data_generator.py  test_single_model.py  test_video_pipeline.py
intelligent-surveillance-system/src/: __init__.py  main.py
intelligent-surveillance-system/src/advanced_tools/: __init__.py  adversarial_detector.py  dino_features.py  domain_adapter.py  multimodal_fusion.py  pose_estimation.py  sam2_segmentation.py  sam2_segmentation.py.backup  temporal_transformer.py  trajectory_analyzer.py
intelligent-surveillance-system/src/core/: __init__.py  types.py
intelligent-surveillance-system/src/detection/: __init__.py  yolo_detector.py
intelligent-surveillance-system/src/intelligent_surveillance_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
intelligent-surveillance-system/src/testing/: __init__.py  ab_testing.py  benchmark_suite.py  performance_metrics.py  pipeline_tester.py  tool_optimization_benchmark.py
intelligent-surveillance-system/src/utils/: __init__.py  exceptions.py  model_manager.py  performance.py
intelligent-surveillance-system/src/validation/: __init__.py  cross_validator.py
intelligent-surveillance-system/surveillance_output/: surveillance_results_1756312631.json  surveillance_results_1756314027.json  surveillance_results_1756314684.json  surveillance_results_1756314737.json  surveillance_results_1756315024.json  surveillance_results_1756315551.json  surveillance_results_1756315591.json  surveillance_results_1756315676.json
intelligent-surveillance-system/test_results/: vlm_test_report_20250922_125508.json
intelligent-surveillance-system/tests/: README.md  __init__.py  conftest.py  test_dino_features.py  test_headless_system.py  test_integration_complete.py  test_model_switching.py  test_multimodal_fusion.py  test_pose_estimation.py  test_temporal_transformer.py  test_trajectory_analyzer.py  test_unit_vlm_fixed.py  test_vlm_extended.py  test_yolo_detector.py
intelligent-surveillance-system/tests/integration/: test_integration_complete.py  test_integration_complete_fixed.py  test_integration_progressive.py  test_model_switching.py
intelligent-surveillance-system/tests/performance/: test_performance_benchmarks.py
intelligent-surveillance-system/tests/unit/: test_adversarial_detector.py  test_domain_adapter.py  test_orchestration_logic.py  test_sam2_segmentator.py  (+5 more)
intelligent-surveillance-system/tests_memoire/: README_TESTS_MEMOIRE.md  pytest.ini  run_gpu_tests.py  test_advanced_tools_unit.py
(+32 files in other folders)
