[project]
name = "pycharmprojects"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "sam-2",
    "transformers>=4.45.0",
    "xformers>=0.0.32.post2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
