[project]
name = "pycharmprojects"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "blobfile>=3.0.0",
    "protobuf>=6.32.0",
    "sam-2",
    "tiktoken>=0.11.0",
    "transformers>=4.45.0",
    "xformers>=0.0.32.post2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
