[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligent-surveillance-system"
version = "1.0.0"
description = "Système de surveillance intelligente multimodale pour la prévention du vol"
authors = [
    {name = "Elfried Steve David KINZOUN", email = "elfried.kinzoun@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    # Core AI/ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "ultralytics>=8.3.0",
    "accelerate>=0.21.0",
    # Computer Vision
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    # Data & ML
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0.3",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.2",
    # Data Validation & Processing
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    # HuggingFace
    "huggingface-hub>=0.17.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0",
    "datasets>=2.14.0",
    "kaggle>=1.7.4.5",
    "tiktoken>=0.11.0",
    "bitsandbytes>=0.47.0",
    "blobfile>=3.0.0",
    "scikit-image>=0.24.0",
]

[project.optional-dependencies]
# Développement
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]

# GPU Support
gpu = [
    "torch[cuda]>=2.1.0",
    "nvidia-ml-py>=12.0.0"
]

# Production 
prod = [
    "redis>=5.0.0",
    "celery>=5.3.0",
    "prometheus-client>=0.19.0"
]

# Tous les extras
all = [
    "intelligent-surveillance-system[dev,gpu,prod]"
]

[project.scripts]
surveillance-system = "src.main:main"

[project.urls]
Homepage = "https://github.com/username/intelligent-surveillance-system"
Documentation = "https://docs.example.com"
Repository = "https://github.com/username/intelligent-surveillance-system.git"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
